<resources>
    <string name="app_name">AutoParser</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="new_classifieds">Nauji skelbimai</string>
</resources>
