<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_purple_gradient">

    <RelativeLayout
        android:id="@+id/rl_inputholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="30dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_username"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_username"
            android:drawableLeft="@drawable/icon_password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:textColorHint="#FFFFFF" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_inputholder"
        android:layout_margin="30dp">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_log_in"
            android:text="@string/login"
            android:textColor="#ed4264"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_log_in"
            android:text="@string/register"
            android:textColor="#ed4264"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>


</RelativeLayout>